VERSION 8 : make some alignment correction and release a version for linked in post

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,9 +1,9 @@
 footer{
   margin-top:80px;
-  background:#020617;
+  background:#38bdf8;
   text-align:center;
   padding:30px;
-  color:#94a3b8;
+  color:#111827;
   border-top:1px solid rgba(255,255,255,.05);
 }
 
